[gd_scene load_steps=6 format=3 uid="uid://b8esp8bo8rj1u"]

[ext_resource type="Script" uid="uid://2uouuidbj1pp" path="res://components/key_item_proto.gd" id="1_oc3wi"]
[ext_resource type="Texture2D" uid="uid://b5i5q0jgecfvf" path="res://assets/Aseprites/Chicle.png" id="2_bvqtf"]
[ext_resource type="FontFile" uid="uid://ojhacg2t03ld" path="res://assets/fonts/geometry-soft-pro/Geometry_Soft_Pro-Bold_N.otf" id="3_edybm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_lakw3"]
radius = 3.0

[sub_resource type="ViewportTexture" id="ViewportTexture_oc3wi"]
viewport_path = NodePath("Sprite/Prompt/SubViewport")

[node name="KeyItemProto" type="Node3D"]
script = ExtResource("1_oc3wi")
Zona = 1
Numero = 1

[node name="PlayerDetect" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetect"]
shape = SubResource("SphereShape3D_lakw3")

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.1, 0)
pixel_size = 0.04
shaded = true
alpha_cut = 1
texture_filter = 0
texture = ExtResource("2_bvqtf")

[node name="Prompt" type="Sprite3D" parent="Sprite"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0.2)
visible = false
texture_filter = 0
texture = SubResource("ViewportTexture_oc3wi")

[node name="SubViewport" type="SubViewport" parent="Sprite/Prompt"]
disable_3d = true
transparent_bg = true
size = Vector2i(185, 60)
size_2d_override_stretch = true

[node name="PromptText" type="RichTextLabel" parent="Sprite/Prompt/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_edybm")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]Interact?[/center]"
fit_content = true
scroll_active = false

[connection signal="Grabed" from="." to="." method="_on_grabed"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_player_detect_body_exited"]
